Add new features to django_cloud_browser AWS S3.
- Upload a file.
- Create a new directory.
- Delete a file or a directory.
- Rename a file or a directory.
- Move a file to another directory.

cloud/base.py
    - Add generic methods to base.py.

cloud/boto_base.py, cloud/aws.py
    - Realize generic methods for AWS under cloud/boto_base.py, and upload form
      under cloud/aws.py.
    - Support show, delete, move, rename for directory keys and pseudo-directories.
    - Directory key: A key stored in S3 used to represent a directory, and its
      name ends with "/". For example: "foo/bar/".
    - Pseduo-direcotory: The direcotory does not has a real key saved in S3.
      For example: "foo/bar/baz", there are no keys "foo/" and "foo/bar/" in
      S3.

cloud/fs.py
    - Implement the file operations method for the local Filesystem, except
      upload.

views.py
    - Add upload, mkdir, delete, rename, and move views. (Some code might be
      still specific for S3, need to improve it.)
    - Support different backend datastores upload html forms.

common.py.
    - Modify path_join(), so that with inputs "foo/", "bar", it will return
      "foo/bar", not "foo//bar".
    - Add path_join_sep(), which returns a path ends with "/", we can use this
      method to get directory path (maybe specific for s3 only).

Templates:
    - Add rename, move template files.
    - Improve template file _browser.html.
        - Add upload, mkdir, delete, rename, move html forms.
        - Insert 3 columns (Delete, Rename, Move to).

Icons:
    - Use the tango project icons for mkdir/delete/rename/move.

Admin site:
    - Add rename, move block div to admin/base.html.
    - Add rename and move admin template files, which are with admin/base.html.
    - Add the file operations urls to admin site.

--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,6 +1,7 @@
 Django==1.5.8
 Fabric==1.4.3
-boto==2.6.0
+boto==2.32.1
+mock==1.0.1
 distribute==0.6.36
 logilab-astng==0.24.1
 logilab-common==0.58.1
